# IP_Camera_django_server

./: pyproject.toml
ip_camera/: db.sqlite3  manage.py
ip_camera/ip_camera/: asgi.py  settings.py  urls.py  wsgi.py
ip_camera/main_page/: admin.py  models.py  urls.py  views.py
ip_camera/main_page/migrations/: 0001_initial.py  0002_ipcameraimage.py  0003_delete_todoitem_ipcameraimage_title.py  0004_camerasettings.py  0005_camerasettings_face_detection.py  0006_camerasettings_frame_process_interval.py  0007_camerasettings_face_detection_db_save_and_more.py
ip_camera/main_page/static/: main.js  styles.css
ip_camera/main_page/templates/: all_images_list.html  base.html  camera.html  home.html  img.html  settings.html
ip_camera/my_script/: my_ip_camera_code.py  my_ip_camera_code_RTSP.py  stream_cache.py
