[tool.poetry]
name = "1-ip-camera-project"
version = "0.1.0"
description = ""
authors = ["PanBard <antek.bezi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
opencv-python = "^4.11.0.86"
requests = "^2.32.3"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
